@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/fenice-1.7.ebuild,v 1.1 2005/02/03 12:56:54 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/fenice-1.7.ebuild,v 1.2 2005/11/02 20:19:53 genstef Exp $
 
 DESCRIPTION="Experimental rtsp streaming server"
 HOMEPAGE="http://streaming.polito.it/fenice.shtml"
@@ -11,7 +11,7 @@ KEYWORDS="~x86 ~ppc"
 IUSE=""
 
 DEPEND="sys-libs/glibc
-		app-text/ghostscript"
+		virtual/ghostscript"
 
 RDEPEND="sys-libs/glibc"
 
