@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/fenice-1.9.ebuild,v 1.4 2005/04/18 13:44:11 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/fenice-1.9.ebuild,v 1.5 2005/11/02 20:19:53 genstef Exp $
 
 DESCRIPTION="Experimental rtsp streaming server"
 HOMEPAGE="http://streaming.polito.it/server"
@@ -11,7 +11,7 @@ KEYWORDS="~x86 ~ppc"
 IUSE=""
 
 DEPEND="virtual/libc
-		app-text/ghostscript"
+		virtual/ghostscript"
 
 RDEPEND="virtual/libc"
 src_unpack() {
