@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nemesi/nemesi-0.5.3.ebuild,v 1.1 2005/08/03 12:14:45 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nemesi/nemesi-0.5.3.ebuild,v 1.2 2005/11/02 20:18:17 genstef Exp $
 
 DESCRIPTION="Tiny rtsp client"
 HOMEPAGE="http://streaming.polito.it/"
@@ -15,7 +15,7 @@ DEPEND="virtual/libc
 		gtk? ( >=x11-libs/gtk+-2.4 )
 		sdl? ( media-libs/libsdl )
 		media-video/ffmpeg
-		app-text/ghostscript"
+		virtual/ghostscript"
 
 export WANT_AUTOMAKE="1.6"
 
