@@ -1,6 +1,10 @@
 # ChangeLog for media-video/nemesi
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nemesi/ChangeLog,v 1.7 2005/08/03 12:14:45 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nemesi/ChangeLog,v 1.8 2005/11/02 20:18:17 genstef Exp $
+
+  02 Nov 2005; Stefan Schweizer <genstef@gentoo.org> nemesi-0.5.0.ebuild,
+  nemesi-0.5.1.ebuild, nemesi-0.5.2.ebuild, nemesi-0.5.3.ebuild:
+  app-text/ghostscript -> virtual/ghostscript
 
 *nemesi-0.5.3 (03 Aug 2005)
 
