@@ -1,6 +1,10 @@
 # ChangeLog for media-video/fenice
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/ChangeLog,v 1.9 2005/08/03 12:12:31 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/fenice/ChangeLog,v 1.10 2005/11/02 20:19:53 genstef Exp $
+
+  02 Nov 2005; Stefan Schweizer <genstef@gentoo.org> fenice-1.7.ebuild,
+  fenice-1.8.ebuild, fenice-1.9.ebuild, fenice-1.10.ebuild:
+  app-text/ghostscript -> virtual/ghostscript
 
 *fenice-1.10 (03 Aug 2005)
 
